# GonnectClientOnly

./: Board.cpp  Board.h  CMakeLists.txt  Evaluation.cpp  GroupManager.cpp  Main.cpp  Project1.sln  Project1.vcxproj  Project1.vcxproj.filters  Search.cpp
client/public/: index.html
client/src/: App.js  index.css
client/src/api/: getBestMove.js  getBoard.js  getIsConnected.js  setBoard.js  setColor.js
client/src/engine/: localEngine.js
client/src/pages/: gonnect.jsx  landing.jsx
server/: Board.cpp  Board.h  Evaluation.cpp  Main.cpp  Project1.vcxproj  Project1.vcxproj.filters  Search.cpp
server/se/Project1/FileContentIndex/: 56adee2d-730e-4f28-a127-15c7d5e20861.vsidx  ac3da355-13c5-47d1-94d4-60fdc53b5a88.vsidx  ae62dad4-9f10-4ad2-8fe4-f2bb58f23765.vsidx  ef4b06ae-29b9-4109-b383-997f123c9aae.vsidx
server/se/Project1/v17/: Browse.VC.db-shm
